tests/baselines/reference/mappedTypeRecursiveInference2.errors.txt
mappedTypeRecursiveInference2.ts(16,48): error TS7006: Parameter 'x' implicitly has an 'any' type.
mappedTypeRecursiveInference2.ts(17,42): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== mappedTypeRecursiveInference2.ts (2 errors) ====
    type MorphTuple = [string, "|>", any]
    
    type validateMorph<def extends MorphTuple> = def[1] extends "|>"
        ? [validateDefinition<def[0]>, "|>", (In: def[0]) => unknown]
        : def
    
    type validateDefinition<def> = def extends MorphTuple
        ? validateMorph<def>
        : {
              [k in keyof def]: validateDefinition<def[k]>
          }
    
    declare function type<def>(def: validateDefinition<def>): def
    
    const shallow = type(["ark", "|>", (x) => x.length])
    const objectLiteral = type({ a: ["ark", "|>", (x) => x.length] })
                                                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    const nestedTuple = type([["ark", "|>", (x) => x.length]])
                                             ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    